--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
 
 <div class="main-container container-fluid">
     <main class="row">
-        <section class="col-md-9">
+        <section class="col-md-9 order-12 order-md-1">
             <router-outlet></router-outlet>
         </section>
-        <app-aside class="col-md-3"></app-aside>
+        <app-aside class="col-md-3 order-1 order-md-12 mb-4 mb-md-0"></app-aside>
       </main>
 </div>
