--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -1,5 +1,16 @@
 <aside>
-    <div class="photo">
-        <img src="https://lh3.googleusercontent.com/BL5HtfZ7LeTzc8bl7dNz1dNkkfnG5gBRN6Nb20RTj32f4fVqijta-kpvSsTxYuLZ5QKJZC_q88cZYB_t_l8oeb1W5R8_JgAlnf1nhxfzy1GTl1j7Wy9qIWNVenNCXx-g0xV6U84SDnV80gPNcms36QDF_aOkYKVMz-4bfFlBI9lWEHg0i84T7oBkSm0bGh6gCQKD0MOuB7fb6w9RYcZ04r3sPRSd7GffbPkHNCAkUrE-7jEFffDKtJQv-vT5M8pAmqJHsWb-ZQ9-3fHN6VKVAc3M1z3laP4c6LC21DXTZ_oEs13St6qVti0FpDJL5B1uEeAhB7p3Ph31LjgKluMkCtCENDbh6riHzDvipF8Wta05dsfvYSF8l5JPGWR6CMyTYym-tJuV0afU6SeLIgXDJLGjsKGmslM1CHM7ELWUxmHVIor85c66KAADvD9efDsRP7oq1SLIIzJMeyUaTLTV8mxtGt28BVaTSSRBqDVZoEIbmnTkXgB0uvLK3R2qP0M5Ovbt9gZILPg7g9BxaZ1n4iYPEH3rX0n-yyA7BHCbzTXvgO-XfImRoOVtLb7n_WqLlPWbTRK_4WHZ9xrHmy6bP04ZLOzTXn4YLl9OOiSo=s1324-no" alt="photo">
+    <div class="row">
+        <div class="col-md-12 col">
+            <div class="photo">
+                <img src="assets/images/photo.png" alt="photo">
+            </div>
+        </div>
+        <div class="col-md-12 col">
+            <h1 class="title">
+                <p>maksym</p>
+                <strong>levynets</strong>
+            </h1>
+            <a routerLink="/about">Read about me</a>
+        </div>
     </div>
 </aside>
