--- a/src/app/aside/aside.component.scss
+++ b/src/app/aside/aside.component.scss
@@ -1,17 +1,17 @@
 aside {
-    position: sticky;
-    height: calc(100% - 50px);
-    top: 50px;
-    right: 50px;
     width: 100%;
-    border-left: 3px solid #000;
     padding: 20px;
     text-align: center;
+    position: sticky;
+    height: 100%;
+    top: 50px;
+    right: 50px;
+    border-left: 3px solid #000;
 
     .photo {
         width: 150px;
         height: 150px;
-        margin: 0 auto;
+        margin: 0 auto 20px;
         border-radius: 50%;
         border: 2px solid #000;
         padding: 10px;
@@ -23,4 +23,22 @@ aside {
             height: auto;
         }
     }
+
+    .title {
+        margin: 0 0 20px;
+        text-transform: uppercase;
+        font-size: 24px;
+        line-height: 28px;
+    }
+
+    @media only screen and (max-device-width: 1024px) {
+        border-left: none;
+        border-bottom: 3px solid #000;
+        position: static;
+
+        .photo {
+            width: 100px;
+            height: 100px;
+        }
+     }
 }
